--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </div>
       <div class="col-md-1 st">
       </div>
-      <div class="col-md-3 st">
+      <div class="col-md-3 st" style="display:none;">
         <div>
           <h4>Other Usefull Apps</h4>
           <hr>
